# graphics

./: CMakeLists.txt  LICENSE  README.md
opengl-base/: CMakeLists.txt  README.md  app.cpp  app.hpp  canvas.cpp  canvas.hpp  config.hpp.in  frame.cpp  frame.hpp  utils.cpp  utils.hpp
opengl-base/shaders/: sample.frag  sample.vert
opengl-common/: CMakeLists.txt  README.md  doxygen.conf.in  exceptions.cpp  misc.cpp  program-holders.cpp  program-holders.hpp  program.cpp  shader-holders.cpp  shader-holders.hpp  shader.cpp
opengl-common/include/opengl-common/: exceptions.hpp  misc.hpp  program.hpp  shader.hpp
